fix: implemented dark mode and unified design tokens across some pages

--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -2,7 +2,7 @@
 @import url('./layout/tokens.css');
 @import url('./layout/navbar.css');
 
-.hero{
+.hero {
     position: relative;
     background: linear-gradient(to left, #9094ff 0%, #5750de 50%, #4361EE 100%);
     border-radius: 1rem;
@@ -18,14 +18,16 @@
     color: white;
 }
 
-.hero h1{
+.hero h1 {
     font-weight: var(--text-semi-bold);
     font-size: var(--text-2xl);
-    margin-bottom:var(--space-2);
+    margin-bottom: var(--space-2);
 }
-.hero p{
+
+.hero p {
     margin: 0;
 }
+
 .hero::after {
     content: "";
     position: absolute;
@@ -35,6 +37,7 @@
     pointer-events: none;
     z-index: 0;
 }
+
 .hero-illustration {
     position: absolute;
     right: 3%;
@@ -43,7 +46,7 @@
     z-index: 1;
 }
 
-.primary-button{
+.primary-button {
     background-color: white;
     color: var(--primary-color);
     margin-top: var(--space-6);
@@ -55,37 +58,43 @@
     cursor: pointer;
     transition: background-color var(--transition-fast);
 }
-.primary-button:hover{
+
+.primary-button:hover {
     background-color: rgba(255, 255, 255, 0.4);
     color: white;
 }
+
 .dashboard-grid {
     width: 80%;
     margin-top: var(--space-6);
-    /*margin-left: var(--space-6);*/
     margin-left: -30px;
 }
+
 .dashboard-view {
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: var(--space-5);
-
 }
+
 .card-tasks {
     background: var(--surface-color);
     padding: var(--space-7);
     border-radius: 16px;
+    transition: background-color 0.3s ease;
 }
+
 .lateral {
     display: flex;
     flex-direction: column;
     gap: var(--space-5);
 }
+
 .task-list {
     list-style: none;
     padding: 0;
     margin-top: 1rem;
 }
+
 .task {
     display: flex;
     justify-content: space-between;
@@ -94,15 +103,19 @@
     border-radius: 12px;
     margin-bottom: 1rem;
     border: 1px solid var(--border-color);
+    transition: border-color 0.3s ease;
 }
-.task-title{
+
+.task-title {
     color: var(--text-color);
 }
+
 .task p {
     margin: 0;
     font-size: var(--text-sm);
     color: var(--muted-text-color);
 }
+
 .status.overdue {
     color: var(--red-secondary-color);
 }
@@ -121,7 +134,9 @@
     padding: var(--space-5);
     border-radius: 16px;
     width: 100%;
+    transition: background-color 0.3s ease;
 }
+
 .card-header.pendences {
     margin-bottom: var(--space-6);
 }
@@ -129,8 +144,9 @@
 .card-header h2 {
     font-size: 1.2rem;
     font-weight: 600;
-    color: var(--text-color);;
+    color: var(--text-color);
 }
+
 .card-performance {
     height: 180px;
     display: flex;
@@ -146,12 +162,14 @@
     gap: var(--space-4);
     align-items: center;
 }
+
 .performance-row {
     display: flex;
     gap: var(--space-4);
     width: 100%;
     justify-content: center;
 }
+
 .performance-row.center {
     justify-content: center;
 }
@@ -191,32 +209,40 @@
     display: inline-block;
     margin-right: 6px;
 }
+
 .dot.approved {
     background: var(--green-secondary-color);
 }
+
 .dot.failed {
     background: var(--red-secondary-color);
 }
+
 .dot.pending {
     background: var(--purple-secondary-color);
 }
+
 .card-students-alert {
     max-height: 260px;
     overflow-y: auto;
 }
+
 .student-list {
     list-style: none;
     padding: 0;
     margin-top: var(--space-4);
 }
+
 .student-list img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
+
 .student-list strong {
     display: block;
     font-size: 0.95rem;
+    color: var(--text-color);
 }
 
 .student-list span {
@@ -224,12 +250,13 @@
     color: var(--muted-text-color);
     font-weight: var(--text-medium);
 }
+
 .student-list .avg {
     color: var(--red-secondary-color);
     font-weight: var(--text-medium);
-
 }
-.details{
+
+.details {
     background-color: var(--primary-color);
     color: white;
     border: none;
@@ -237,38 +264,37 @@
     padding: var(--space-2) var(--space-4);
     font-size: var(--text-sm);
     font-weight: var(--text-medium);
+    cursor: pointer;
 }
-.details:hover{
+
+.details:hover {
     background-color: var(--button-hover-color);
     transition: ease-in-out var(--transition-fast);
 }
-.status{
+
+.status {
     color: var(--text-color);
     font-weight: var(--text-medium);
 }
-.date.overdue{
+
+.date.overdue {
     color: var(--red-secondary-color);
 }
+
 .lateral {
     display: flex;
     flex-direction: column;
     gap: var(--space-5);
 }
-.task p{
+
+.task p {
     font-size: var(--text-md);
     font-weight: var(--text-medium);
     display: flex;
     gap: var(--space-2);
     margin-top: var(--space-4);
 }
-.dashboard-view {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: var(--space-5);
-}
-.student-list {
-    list-style: none;
-}
+
 .student-alert {
     display: flex;
     align-items: center;
@@ -277,7 +303,9 @@
     border-radius: var(--medium-radius);
     gap: 0.8rem;
     padding: 0.5rem 0;
+    transition: background-color 0.3s ease;
 }
+
 .student-pic {
     width: 80px;
     height: 80px;
